--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"declaration": true,
-		
+		"composite": true,
+
 		"removeComments": true,
 
 		"strict": true,
@@ -20,11 +21,6 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedIndexedAccess": true
 	},
-	"include": [
-		"src/**/*"
-	],
-	"exclude": [
-		"node_modules",
-		"**/*.spec.ts"
-	]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "**/*.spec.ts"]
 }
