--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"declaration": true,
-		"composite": true,
 
 		"removeComments": true,
 
@@ -22,5 +21,5 @@
 		"noUncheckedIndexedAccess": true
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules", "**/*.spec.ts"]
+	"exclude": ["node_modules", "**/*.spec.ts", "dist/**/*"]
 }
